# conrod_chat

./: .travis.yml  Cargo.toml  LICENSE  README.md  libssl_for_android.sh  setenv_android.sh  setenv_linux.sh
examples/: chat_client.rs  rui.rs  run.rs  run_trait.rs  run_with_keypad.rs  text_edit.rs  websocket_glium.rs
examples/support/: app_macros.rs  assets.rs  assets_android.rs  mod.rs
src/: app.rs  chat.rs  dyapplication.rs  gui.rs  lib.rs  run_conrod.rs  staticapplication.rs  test_shared.rs
src/backend/: mod.rs  websocket.rs
src/custom_widget/: chatview.rs  chatview_futures.rs  chatview_futures_keypad.rs  item_history.rs  mod.rs
tests/: ping.rs
