[package]
name = "conrod_chat"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod = { git="https://github.com/PistonDevelopers/conrod.git", branch="master", features = ["glium","winit"]}
conrod_derive = {git ="https://github.com/PistonDevelopers/conrod.git", branch="master"}
conrod_keypad = {git="https://github.com/alanpoon/conrod_keypad.git",optional=true}
websocket = { version ="0.20.2",optional=true}
futures ={ version = "0.1.14", features=["use_std"] }
tokio-core ="0.1.9"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[features]
web_socket = ["websocket"]
backend_glium_winit = []
default = ["web_socket","backend_glium_winit"]
keypad = ["conrod_keypad","web_socket","backend_glium_winit"]

[dev-dependencies]
serde="1.0"
serde_json = "1.0"
image = "0.15.0"
serde_derive ="1.0"
hardback_codec = {git = "https://github.com/alanpoon/hardback_codec.git"}
toa-ping ={git="https://github.com/alanpoon/toa-ping.git"}

[package.metadata.android]
package_name = "com.github.apoon1.conrod-chat"
label = "Conrod Chat"
android_version = 19
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[target.'cfg(target_os="android")'.dev-dependencies]
android_glue = "0.2.3"
rusttype = "0.3.0"

[target.'cfg(not(target_os="android"))'.dev-dependencies]
find_folder = "0.3.0"
