[package]
name = "conrod_chat"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod_core = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
conrod_derive = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
conrod_keypad = {git="https://github.com/alanpoon/Conrod_KeyPad.git",optional=true}

[features]
keypad = ["conrod_keypad"]

[dev-dependencies]
serde="1.0"
serde_json = "1.0"
image = "0.15.0"
serde_derive ="1.0"
hardback_codec = {git = "https://github.com/alanpoon/hardback_codec.git"}
toa-ping ={git="https://github.com/alanpoon/toa-ping.git"}
conrod_glium = {git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
conrod_winit = {git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
glium = { version = "0.23" }
tokio-core ="0.1.9"
futures ={ version = "0.1.14", features=["use_std"] }
websocket = { version ="0.20.2"}

[package.metadata.android]
package_name = "com.github.apoon1.conrod-chat"
label = "Conrod Chat"
android_version = 19
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[target.'cfg(target_os="android")'.dev-dependencies]
android_glue = "0.2.3"
rusttype = "0.3.0"

[target.'cfg(not(target_os="android"))'.dev-dependencies]
find_folder = "0.3.0"
